<resources>
    <string name="app_name">ĐATN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Hoạt động</string>
    <string name="message">Tin nhắn</string>
    <string name="profile">Cá nhân</string>
    <string name="user">Người dùng</string>
    <string name="logout">Đăng xuất</string>
    <string name="post_action">Đăng hoạt động</string>
    <string name="online">online</string>
    <string name="ofline">ofline</string>
    <string name="enter_message">Đang nhập tin nhắn....</string>
    <string name="name">Trung Kiên</string>
    <string name="enter_the_message">Nhập tin nhắn....</string>
    <string name="recover_pass">Quên mật khẩu? Khôi phục</string>
    <string name="not_have_account">Bạn chưa có tài khoản? Tạo tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Tạo tài khoản</string>
    <string name="email">Email....</string>
    <string name="password">Mật khẩu</string>
    <string name="question_login">Bạn đã có tài khoản chưa? Đăng nhập?</string>
    <string name="hello">Hello</string>
    <string name="custom_time">31/10/2019 7:00PM</string>
    <string name="seen">Đã xem</string>
    <string name="send">Đã gửi</string>
    <string name="description">Hello, chào tất cả mọi người</string>
    <string name="number_like">1k likes</string>
    <string name="like">Thích</string>
    <string name="liked">Đã thích</string>
    <string name="comment">Bình luận</string>
    <string name="share">Chia sẻ</string>
    <string name="user_mail">kientran26070809@gmail.com</string>
    <string name="say_something">Nói gì đó đi</string>
    <string name="send_empty_mes">Không thể gửi tin nhắn trống....</string>
    <string name="error_speech_to_text">Lấy làm tiếc! Thiết bị của bạn không hỗ trợ nhập liệu bằng giọng nói.</string>
    <string name="recover_password">Khôi phục mật khẩu</string>
    <string name="recover">Khôi phục</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="comment_add">Đã gửi bình luận....</string>
    <string name="txt_camera">Vui lòng bật máy ảnh và cho phép lưu trữ</string>
    <string name="txt_storage">Vui lòng cho phép lưu trữ</string>
    <string name="edit_profile">Chỉnh sửa ảnh đại diện</string>
    <string name="edit_cover">Chỉnh sửa ảnh bìa</string>
    <string name="edit_name">Chỉnh sửa tên</string>
    <string name="edit_phone">Chỉnh sửa số điện thoại</string>
    <string name="update_profile">Cập nhật ảnh đại diện</string>
    <string name="update_cover">Cập nhật ảnh bìa</string>
    <string name="update_name">Cập nhật tên</string>
    <string name="update_phone">Cập nhật số điện thoại</string>
    <string name="update">Cập nhật</string>
    <string name="camera">Máy ảnh</string>
    <string name="album">Album</string>
    <string name="pick_image">Chọn hình ảnh từ</string>
    <string name="error_update_profile">Lỗi cập nhật ảnh đại diện</string>
    <string name="some_error">Một số lỗi xảy ra</string>
    <string name="choice_action">Chọn hoạt động</string>
    <string name="image_profile">Ảnh đại diện</string>
    <string name="image_cover">Ảnh bìa</string>
    <string name="authentication_failed">Quá trình xác thực thất bại</string>
    <string name="delete">Xóa bài viết</string>
    <string name="hint_email">Email</string>
    <string name="send_email">Gửi tới email</string>
    <string name="lenght_pass">Mật khẩu phải dài hơn 6</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="update_post">Cập nhật bài</string>
    <string name="add_new_post">Thêm bài mới</string>
    <string name="upload">Tải lên</string>
    <string name="write_comment">Viết bình luận....</string>
    <string name="title">Đồ án tốt nghiệp</string>
    <string name="subTitle">Diêm Đình Phong</string>
    <string name="setting">Cài đặt</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="email_send">Gửi tới email</string>
    <string name="question_logout">Bạn muốn đăng xuất tài khoản này?</string>
    <string name="edit">Chỉnh sửa hoạt động</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="question_delete_action">Xóa hoạt động này?</string>
    <string name="err_login">Tài khoản hoặc mật khẩu không đúng vui lòng nhập lại!</string>
    <string name="welcome">Welcome my project</string>

</resources>
