<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_chat"
        android:title="@string/message"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chat"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_user_profile"/>

    <item
        android:id="@+id/nav_users"
        android:title="@string/user"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_users"/>
    
</menu>