<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/auto_dp_0"
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            tools:ignore="ContentDescription"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/auto_dp_0"
            android:layout_weight="1"
            android:background="#F1EDED"
            tools:ignore="ContentDescription"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/auto_dp_20"
        android:layout_marginLeft="@dimen/auto_dp_20"
        android:orientation="vertical"
        android:padding="@dimen/auto_dp_20"
        android:background="@drawable/shape_white_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/auto_dp_25"
            android:textStyle="italic"
            android:textColor="@color/cam2"
            tools:ignore="SpUsage"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auto_dp_40"
            android:background="@drawable/shape_blue_border"
            android:text="@string/register"
            android:textSize="@dimen/auto_sp_14"
            android:layout_marginTop="@dimen/auto_dp_50"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auto_dp_40"
            android:layout_marginTop="@dimen/auto_dp_10"
            android:background="@drawable/shape_blue_border"
            android:text="@string/login"
            android:textSize="@dimen/auto_sp_14"
            android:textColor="@color/white" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/auto_dp_100"
        android:layout_height="@dimen/auto_dp_100"
        android:background="@drawable/logo2"
        android:layout_marginTop="@dimen/auto_dp_30"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>